fix: adjustment p contrast color

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,7 +1,7 @@
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   background: #191a22;
-  p { color: #b8c3f1}
+  p { color: #abb6e1}
   a { color: #b1e5fd }
   ul, li { color: #b1e5fd }
 }
